# rtimdb

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CTestConfig.cmake  README.md  TODO  appveyor.yml  cell.hpp  command.hpp  commandqueue.cpp  commandqueue.hpp  database.cpp  database.hpp  doublebitbinary.hpp  exceptions.cpp  exceptions.hpp  file.hpp  point.cpp  point.hpp  pointtype.hpp  rtimdb_config.hpp.in  time.hpp  transition.hpp
core/: database.cpp  database.hpp  datastore.cpp  datastore.hpp  flag.hpp  flags.cpp  flags.hpp  point.cpp  point.hpp  pointtype.hpp  pointvalue.cpp  pointvalue.hpp  timestamp.hpp
core/details/: bubblesort.hpp  cell.hpp  iterator.cpp  iterator.hpp  locator.hpp  observer.hpp  optional.hpp  selection.hpp  transaction.hpp  variant.hpp
details/: action.hpp  cell.hpp  consumer.cpp  consumer.hpp  crob.hpp  defaultmappinghelper.cpp  defaultmappinghelper.hpp  duplicateselectionpolicy.hpp  event.hpp  eventclass.hpp  eventiterator.cpp  eventiterator.hpp  eventqueue.cpp  eventqueue.hpp  events.cpp  events.hpp  iterator.cpp  iterator.hpp  locator.hpp  mapping.hpp  mappinghelper.cpp  mappinghelper.hpp  observer.hpp  pointdescriptor.hpp  polldescriptor.hpp  pollresult.cpp  pollresult.hpp  producer.hpp  prologue.hpp  selection.hpp  sortedmappinghelper.cpp  sortedmappinghelper.hpp  timestamp.hpp  transaction.hpp  transitionqueue.cpp  transitionqueue.hpp  transitionqueuetransaction.cpp  transitionqueuetransaction.hpp  transitiontransactionentry.hpp  variant.hpp
doc/: CLA.odt  IP search.ods  RTIMDB Integration Guide.odt
outstation/: command.hpp  commandqueue.cpp  commandqueue.hpp  database.cpp  database.hpp  transition.hpp
outstation/details/: crob.hpp  pointdescriptor.hpp  prologue.hpp  timestamp.hpp  transitionqueue.cpp  transitionqueue.hpp  transitionqueuetransaction.cpp  transitionqueuetransaction.hpp  transitiontransactionentry.hpp  variant.hpp
tests/: bubblesort.cpp  commandqueue.cpp  commandqueuemanagement.cpp  consumer.cpp  create_data_store.cpp  create_database.cpp  filtering.cpp  freezing.cpp  gen_pointtype_permutations.pl  insertions.cpp  optional.cpp  produce_transitions.cpp  queries_on_empty_db.cpp  register_producer.cpp  test_config_1.hpp  test_config_2.hpp  test_config_3.hpp  test_config_4.hpp  test_config_5.hpp  test_config_6.hpp  test_config_7.hpp  test_config_8.hpp  try_concurrent_transactions.cpp  try_freeze.cpp  try_iterate.cpp  try_register_observer.cpp  try_set_filter.cpp  try_update_through_observer.cpp  try_variant.cpp  variant.cpp
